--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,7 @@
     padding: 0;
     margin: 0;
     font-family: Quicksand, sans-serif;
+    scroll-behavior: smooth;
   }
   .line-text {
     display: -webkit-box;
